--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
+  build_runner:
+  custom_lint:
+  riverpod_generator: ^3.0.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  custom_lint: ^0.8.0
   riverpod_lint: ^3.0.3
 
 flutter:
