--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
+  seo_renderer: ^0.6.0
   shared_preferences: ^2.5.3
 
 dev_dependencies:
   build_runner:
   custom_lint:
-  riverpod_generator: ^3.0.3
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  riverpod_generator: ^3.0.3
   riverpod_lint: ^3.0.3
 
 flutter:
