feat: add HeroWidget with responsive layout for large and small screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ flutter:
 
   assets:
     - assets/
-    - assers/images/main.jpg
+    - assets/images/main.jpg
 
   fonts:
     - family: Poppins
